fix scrollbar css build error

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -16,7 +16,7 @@
   }
 
   * {
-    @apply scrollbar-thin scrollbar-thumb-gray-300 scrollbar-track-transparent;
+    
   }
 }
 
